[package]
name = "ctb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.141"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
uuid = { version = "1.17.0", features = ["v4"]}
sha2 = "0.10.9"
hex = "0.4.3"
jwt = "0.16.0"
hmac = "0.12.1"
futures-util = "0.3.31"
url = "2.5.4"
tungstenite = "0.27.0"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
chrono = "0.4.41"
rand = "0.9.2"
colored = "2.1"
webhook = { version = "2.1.2", features = ["models"] }
ctrlc = "3.4.7"

[[test]]
name = "strategy_tests"
path = "tests/strategy/mod.rs"

[[test]]
name = "helper"
path = "tests/helper/mod.rs"
